# pangan-be

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  README.md  alembic.ini  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  env.local  env.production.example  ingest-2024-summary.json  ingest-level1-2024-summary.json  pyproject.toml  pytest.ini  real-ingest-2024-summary.json  requirements.txt  todo.md  todo_deploy.md  todo_phase3.md
.cursor/commands/: plan.md
.cursor/rules/: pyton.mdc
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
app/: lifespan.py  main.py
app/api/: __init__.py  commodities.py  health.py  prices.py  provinces.py  router.py  schemas.py
app/common/: checksum.py  logging.py  settings.py
app/core/: __init__.py  errors.py  models.py
app/infra/: db.py  models.py  seeding.py
app/infra/http/: upstream.py
app/infra/repositories/: commodities.py  prices.py  provinces.py
app/usecases/: __init__.py  health_service.py  ingest.py  ports.py  price_service.py  price_service_adapter.py  schemas.py
docs/: API_USAGE.md
migrations/: env.py
migrations/versions/: 78b4acd4c0a9_refine_price_scale_and_indexes.py  a66d9e35e77b_init_schema.py  add_api_query_indexes.py
rfc/: brain.md  database.md  fasty.md  technical.md
scripts/: dev.py  migrate.py
tests/: conftest.py
tests/integration/: test_performance.py  test_prices_api.py
tests/unit/: test_price_service.py
