[tool.poetry]
name = "pangan-be"
version = "0.1.0"
description = "Pangan Indonesia Data Cache & API"
authors = ["pangan-team <dev@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.13"
uvicorn = {extras = ["standard"], version = "0.22.0"}
pydantic = "2.8.2"
httpx = "0.28.4"
sqlalchemy = "2.0.20"
psycopg = {extras=["binary"], version = "3.2.1"}
apscheduler = "3.10.1"
python-json-logger = "2.0.7"

[tool.poetry.dev-dependencies]
ruff = "^0.19.0"
black = "^24.3.0"
mypy = "^1.7.0"

[tool.ruff]
line-length = 88

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.12+
target-version = "py312"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
# Ignore `E402` (import violations) in all `__init__.py` files, and in `app/main.py`.
"__init__.py" = ["E402"]
"app/main.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
